--- a/app/assets/stylesheets/widget/widget.css.sass
+++ b/app/assets/stylesheets/widget/widget.css.sass
@@ -190,10 +190,23 @@ strong
         position: absolute
         right: 20px
         top: 30px
+        z-index: 10
         .icon
           margin: 0 10px
           cursor: pointer
       &:hover
         .options
           display: inline-block
+
+    .not-visible-overlay
+      position: absolute
+      top: 0
+      bottom: 0
+      left: 2px
+      right: 0
+      background: $white
+      opacity: 0.8
+      border-radius: 3px
+      border: 0px
+
 
